update error